--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "riotjs module loader for webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "./node_modules/.bin/webpack-dev-server --inline --hot"
   },
   "repository": {},
   "keywords": [
@@ -15,8 +16,8 @@
     "module"
   ],
   "author": {
-    "name": "Eduardo Nunes",
-    "email": "esnunes@gmail.com"
+    "name": "René Thiel",
+    "email": "mail@renethiel.info"
   },
   "license": "MIT",
   "bugs": {
@@ -36,7 +37,7 @@
     "babel-loader": "^6.2.4",
     "riot": "^2.4.1",
     "riotjs-loader": "^3.0.0",
-    "webpack": "^1.13.1",
+    "webpack": "^1.5.3",
     "webpack-dev-server": "^1.14.1"
   }
 }
